[package]
name = "json-forensics"
version = "0.1.1"
authors = ["Sentry <oss@sentry.io>"]
keywords = ["json", "python", "nan", "infinity", "serde_json"]
description = "A crate that adds a read adapter to deal with bad Python caused JSON payloads (NaNs and Infinities)"
license = "BSD-3-Clause"
homepage = "https://github.com/getsentry/rust-json-forensics"
edition = "2021"
readme = "README.md"

[dependencies]
serde = { version = "1.0.82", optional = true }
serde_json = { version = "1.0.33", optional = true }

[features]
default = []
serde = ["dep:serde", "dep:serde_json"]
